Changed text endpoint
